# hcr2-database-website

./: .env.dev.example  .env.example  .gitignore  ADMIN.md  DEV.md  README.md  SETUP.md  data.sql  index.html
a_supprimer/: maintenance.html  test_curl.php
auth/: admin_actions.php  admin_pending.php  check_auth.php  config.php  delete_news.php  edit_news.php  post_news.php  status.php
backend/: .env.example  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: compat.py  dependencies.py  legacy.py  responses.py
backend/app/api/v1/: admin.py  auth.py  health.py  public.py  router.py
backend/app/core/: __init__.py  config.py  errors.py  security.py
backend/app/db/: __init__.py  session.py
backend/app/models/: __init__.py
backend/app/repositories/: news.py  public_data.py
backend/app/schemas/: admin.py  auth.py  news.py  public.py  settings.py
backend/app/services/: admin_service.py  auth_service.py  news_service.py  public_data_service.py  public_submission_service.py
backend/tests/: test_config.py  test_db_session.py  test_health.py  test_public_data_service.py  test_public_endpoints.py  test_public_submission_service.py  test_security.py
backups/: main-20260326-023356.sqlite  main-20260403-073123.sqlite
docs/: README.md  final-cutover-scope.md  final-migration-status.md  final-schema-standardization.md  final-sweep-check.md  main-refactor-alignment-report.md  postgresql-api-audit.md  postgresql-normalization-report.md  postgresql-production-refactor-status.md  ui-parity-check.md
frontend/: index.html  package.json  (+2 more)
(+113 files in other folders)
